--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Compra</title>
-		<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+		
 </head>
 <body>
 	<div class="content">
@@ -21,16 +25,16 @@
 			<button id="button-submit" type="submit">Adicionar item</button>
 			<ul>
 				<li>
-					<input type="checkbox" name="" id=""> Pão de forma <img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""class="input-li"> <span>Pão de forma</span><img src="./assets/icons/trash.svg" alt="">
 				</li>
 				<li>
-					<input type="checkbox" name="" id=""> Café preto <img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""  class="input-li"> <span>Café preto </span><img src="./assets/icons/trash.svg" alt="">
 				</li>
 				<li>
-					<input type="checkbox" name="" id=""> Suco de laranja <img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""  class="input-li"> <span>Suco de laranja </span><img src="./assets/icons/trash.svg" alt="">
 				</li>
 				<li>
-					<input type="checkbox" name="" id=""> Bolacha <img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""  class="input-li"> <span>Bolacha </span><img src="./assets/icons/trash.svg" alt="">
 				</li>
 			</ul>
 		</form>
