--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
 			<button id="button-submit" type="submit">Adicionar item</button>
 			<ul>
 				<li>
-					<input type="checkbox" name=""class="input-li"> <span>Pão de forma</span><img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""class="input-li"> <span>Pão de forma</span><img src="./assets/icons/trash.svg" alt="Remover item" class="delete-item">
 				</li>
 				<li>
-					<input type="checkbox" name=""  class="input-li"> <span>Café preto </span><img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""  class="input-li"> <span>Café preto </span><img src="./assets/icons/trash.svg" alt="Remover item" class="delete-item">
 				</li>
 				<li>
-					<input type="checkbox" name=""  class="input-li"> <span>Suco de laranja </span><img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""  class="input-li"> <span>Suco de laranja </span><img src="./assets/icons/trash.svg" alt="Remover item" class="delete-item">
 				</li>
 				<li>
-					<input type="checkbox" name=""  class="input-li"> <span>Bolacha </span><img src="./assets/icons/trash.svg" alt="">
+					<input type="checkbox" name=""  class="input-li"> <span>Bolacha </span><img src="./assets/icons/trash.svg" alt="Remover item" class="delete-item">
 				</li>
 			</ul>
 		</form>
 	</div>
+	<script src="./script.js"></script>
 </body>
 </html>
